--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,8 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/bootstrap.min.css",
+              "src/assets/bootstrap-rtl.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -120,6 +122,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ng-persian"
 }
